# fall_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skills-lock.json
configs/: bytetrack_fall.yaml  default.yaml
configs/mmaction2/: stgcn_fall.py
data/: manifest.example.csv
docs/: DATA_AND_EVALUATION.md
fall_detection/: __init__.py  benchmark.py  cli.py  config.py  dataset.py  detector.py  gcn.py  identity.py  pipeline.py  pose.py  rules.py  scene.py  stgcn.py  temporal.py  training.py  types.py  visualization.py
tests/: test_core.py
